<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/equalB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="equalsBtn"
                android:text="@string/equal" />

            <Button
                android:id="@+id/pointB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pointBtn"
                android:text="@string/point" />

            <Button
                android:id="@+id/clearB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clearBtn"
                android:text="@string/clear" />

            <Button
                android:id="@+id/divideB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="divideBtn"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sevenBtn"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eightB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="eightBtn"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nineB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nineBtn"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiplyB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="multiplyBtn"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/substractionB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_weight="1"
                android:onClick="subsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/substract" />

            <Button
                android:id="@+id/fourB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="fourBtn"
                android:text="@string/four" />

            <Button
                android:id="@+id/fiveB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="fiveBtn"
                android:text="@string/five" />

            <Button
                android:id="@+id/sixB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sixBtn"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="oneBtn"
                android:text="@string/one" />

            <Button
                android:id="@+id/zeroB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="zeroBtn"
                android:text="@string/zero" />

            <Button
                android:id="@+id/twoB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="twoBtn"
                android:text="@string/two" />

            <Button
                android:id="@+id/threeB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="threeBtn"
                android:text="@string/three" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:autofillHints="false"
        android:background="@color/teal_700"
        android:inputType="numberDecimal"
        android:text="@string/value1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="211dp"
        android:autofillHints="false"
        android:background="@color/teal_700"
        android:inputType="numberDecimal"
        android:text="@string/value2"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:autofillHints="false"
        android:background="@color/teal_700"
        android:inputType="none"
        android:text="@string/value3"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/plusB"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="97dp"
        android:layout_height="49dp"
        android:layout_marginStart="305dp"
        android:layout_marginLeft="305dp"
        android:layout_marginTop="545dp"
        android:layout_marginBottom="192dp"
        android:layout_weight="1"
        android:onClick="addBtn"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>